--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.nevertrouble.strategy</groupId>
-    <artifactId>enum-with-strategy</artifactId>
+    <artifactId>strategy-with-enum</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
